# bachelor-project

./: .gitignore  .gitignore.save  README.md  noter fra bsc møde.txt
code/: 00README.txt  chr2_random.fa  chr3_random.fa  patscan_test.re  uclust_src1.0.43.tz
code/amplicon/: p3_clean_A-13-Caecum_S26.fna  p3_clean_A-13-Ileum_S25.fna  p3_clean_A-16-Ileum_S31.fna  p3_clean_A-17-Caecum_S34.fna  p3_clean_A-19-Caecum_S37.fna  p3_clean_A-19-Ileum_S36.fna  p3_clean_A-2-Ileum_S3.fna  p3_clean_A-4-Caecum_S8.fna
code/c++/: CMakeLists.txt  FileService.cpp  FileService.h  MakeFile  chr22.fa  main  main.cc  main.cpp  no_insertions.re  pcr_product.re  scan_for_matches-no_insertions-results.fa
code/genome/: scan_for_matches-no_insertions-results (2).fa~  scan_for_matches-no_insertions-results (3).fa  scan_for_matches-no_insertions-results.fa  scan_for_matches-no_insertions-results.fa~
code/kmcbundle/: README.txt  README.txt~
code/patscan-patterns/: medium_test.pat  no_insertions.pat  patscan_test.pat  simple_test.pat
code/python/: main.py  main.py~
code/python_regex/: main.py  main.py~
code/regex-patterns/: medium_test.re  (+6 more)
tex/: GanttDiagram.ods  litterature.bib  litterature.bib~  thomsen.haarslev_midtvejdsrapport.aux  thomsen.haarslev_midtvejdsrapport.bbl  thomsen.haarslev_midtvejdsrapport.blg  thomsen.haarslev_midtvejdsrapport.out  thomsen.haarslev_midtvejdsrapport.tex  thomsen.haarslev_midtvejdsrapport.toc  thomsen.haarslev_synopsis.aux  thomsen.haarslev_synopsis.bbl  thomsen.haarslev_synopsis.blg  thomsen.haarslev_synopsis.out  thomsen.haarslev_synopsis.tex
(+437 files in other folders)
